# PantherSwap-Edge

./: .env  .env.example  ALPACA_INTEGRATION_COMPLETE.md  ALPACA_INTEGRATION_GUIDE.md  COMPREHENSIVE_OPTIMIZATION_REPORT.md  COMPREHENSIVE_SIMULATION_REPORT.md  COMPREHENSIVE_TESTING_FRAMEWORK.md  COMPREHENSIVE_TRADING_SIMULATION_REPORT.md  Cargo.toml  Cargo_standalone.toml  DATABASE_INTEGRATION_ANALYSIS.md  Dockerfile  FINAL_OPTIMIZATION_REPORT.md  LIVE_TRADING_COMPREHENSIVE_ANALYSIS_REPORT.md  OPTIMIZATION_VALIDATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PRODUCTION_PERFORMANCE_TEST_REPORT.md  PRODUCTION_READINESS_REPORT.md  README.md  README_ALPACA_INTEGRATION.md  REAL_TRADING_SCENARIO_DEMO.md  SIMULATION_VS_REALITY_ANALYSIS.md  THROUGHPUT_OPTIMIZATION_PLAN.md  alpaca_diagnostic.sh  alpaca_live_trading_demo.sh  comprehensive_trading_db_test.rs  comprehensive_trading_simulation.sh  database_query_manager_fixes_summary.md  demo_sim  demo_simulation.rs  docker-compose.pgbouncer.yml  ig_api_test.html  live_system_test.sh  live_test_results.txt  live_trading_comprehensive_demo.sh  minimal_rust_db  minimal_rust_db.rs  optimized_hft_performance_test.rs  problems.txt  production_assessment.sh  (+24 more)
.github/workflows/: ci-cd.yml
.sqlx/: query-035ed79c592aa727d1b2fa3499b8c195e9b58827529f750eb9d06da78d60681e.json  query-11e3a5237cde24294ad3ad39c6c86d00a954dcc799ff54f1af6fbe4e7a84bf4a.json  query-14bed701b3e05bc6936578abbab111a122ab5fd5f206bceccef00dc93c059b8f.json  query-2aa8b967a656cdb68a5229015933bf3e5ea71106f7545ec16b57f10f01c178e7.json  query-2ad66b9151856d74a03629084ab822ffb09f2ba5e122ad645e8bd7fd8ab558fc.json  query-3150d0946c1dbb081af712333bcfe64632a5b3711835f6a517abd1803e4b4e53.json  query-4ebd5b0dae3706bb04abfe5e2f721dfe2d3fbeee40445a24c68b6dcff4e29518.json  query-651f13cd3701dfbbd2b2d75daa35b13b9107c3017bb974458f03e9c4fbc947f9.json  query-7b5a639820f1f53228631a405d4bf92b959c780de62caca0f240170ec98f5dae.json  query-a1024cca840e21ad00358d96ee799ecc9233e7a625c6e3271be3a4bb0304ee4e.json  query-a149a7640ea42bdcb6237fecbb24e6d934dd046be007a162d158227d96568ef8.json  query-c8c10ca159239237ba378ccc55f90db9c501ed497c55935f38a0f7a3fda02390.json  query-dea4e5b14e3cd1043c09f2ae408714d9f53711123d4e9e6bf134839199d46fdd.json
config/: default.toml  development.toml  e2e_testing.toml  pgbouncer.ini  production.toml  userlist.txt
docs/: README.md  database-architecture.md  database-deployment-guide.md  database-schema-reference.md
docs/production/: go-live-checklist.md
examples/: basic_pool_demo.rs  connection_pooling_demo.rs  data_validation_demo.rs  database_health_monitoring_demo.rs  database_optimization_demo.rs  database_performance_testing_demo.rs  production_monitoring_demo.rs  query_demo.rs  simple_connection_pooling_demo.rs  simple_health_monitoring_demo.rs  simple_performance_testing_demo.rs  simple_query_demo.rs  simple_validation_demo.rs  validation_core_demo.rs  working_query_demo.rs
grafana/dashboards/: system-overview.json  trading-performance.json
helm/: Chart.yaml  values.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pgbouncer-deployment.yaml  rbac.yaml  secret.yaml  service.yaml
migrations/: 20241219_strategy_performance_analytics.sql  20241220_advanced_indexing_optimization.sql  20241220_materialized_views_optimization.sql  20250618080354_initial_setup.sql  20250618080525_market_data_tables.sql  20250618080548_ai_analytics_tables.sql  20250618080612_trading_tables.sql  20250618080637_risk_management_tables.sql  20250618080657_timescaledb_optimization.sql  20250618090000_advanced_optimization.sql  20250620_trading_execution_logging.sql
real_db_test_04E6D4DB/: insert_real_data.sql
scripts/: Cargo.toml  alpha_vantage_live_demo.sh  deploy_optimizations.sh  live_trading_demo.sh  run_all_tests.rs  run_comprehensive_testing.sh  run_e2e_comprehensive_tests.sh  run_optimization_benchmark.sh  run_performance_benchmarks.sh  test_ai_simulation.rs  test_connectivity.rs  test_end_to_end.rs  test_market_data.rs  test_simple_storage.rs  test_trading_performance.rs
simulation_results_4994A339/: comprehensive_report.txt  trades.csv
src/: lib.rs  main.rs
src/ai/: hmm_integration.rs  hmm_performance_validator.rs  hmm_regime.rs  hmm_regime_test.rs  inference.rs  mod.rs  models.rs  monitoring.rs  optimization.rs  rl_agent.rs  time_series.rs
src/api/: health.rs  middleware.rs  mod.rs  responses.rs  routes.rs
src/backup/: mod.rs
src/config/: settings.rs
src/data/: retention.rs
src/database/: advanced_indexes.rs  alerting.rs  alpaca_logging.rs  connection_cache.rs  connection_pool.rs  data_quality.rs  health_monitor.rs  integrity.rs  materialized_views.rs  migrations.rs  mod.rs  optimization.rs  optimization_validator.rs  performance_testing.rs  pgbouncer_integration.rs  pool_factory.rs  queries.rs  query_functions.rs  query_monitor.rs  schema.rs  types.rs  validation.rs  (+1 more)
tests/: README.md  advanced_analytics_framework.rs  api_endpoint_tests.rs  auth_tests.rs  backend_integration_helpers.rs  backend_integration_tests.rs  comprehensive_integration_tests.rs  comprehensive_test_orchestrator.rs  comprehensive_test_suite.rs  database_tests.rs  e2e_comprehensive_test.rs  e2e_test_implementations.rs  e2e_test_runner.rs  enhanced_performance_tests.rs  execution_scenario_helpers.rs  execution_scenario_tests.rs  hmm_enhanced_features_test.rs  hmm_performance_validation_tests.rs  industry_benchmarking_framework.rs  integration_production_deployment_tests.rs  integration_tests.rs  integration_trading_api.rs  optimization_integration_test.rs  optimization_validation.rs  order_book_management_tests.rs  order_book_test_helpers.rs  performance_benchmarking_helpers.rs  performance_benchmarking_tests.rs  performance_tests.rs  production_monitoring_test.rs  rate_limit_tests.rs  real_time_market_data_helpers.rs  real_time_market_data_tests.rs  run_comprehensive_testing_campaign.rs  run_execution_scenario_tests.rs  run_order_book_tests.rs  simple_test.rs  strategy_weight_optimization_test.rs  system_reliability_monitoring_tests.rs  test_runner.rs  (+3 more)
(+67 files in other folders)
