[package]
name = "pantherswap-edge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime and HTTP framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "bigdecimal", "rust_decimal"] }
bigdecimal = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# WebSocket support for IG Trading streaming
tungstenite = "0.21"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.4"

# AI/ML dependencies for production models (lightweight implementation)
ndarray = "0.15"
nalgebra = "0.32"
statrs = "0.16"
# Note: Candle dependencies temporarily disabled due to version conflicts
# Will be re-enabled with compatible versions in future updates
# candle-core = "0.3"
# candle-nn = "0.3"
# candle-transformers = "0.3"
# linfa = "0.7"
# smartcore = "0.3"
# tch = { version = "0.13", optional = true }

# Additional utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "timeout"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.19"
rand = "0.8"
rust_decimal = { version = "1.37", features = ["serde"] }
async-trait = "0.1.88"
bincode = "1.3"

# System monitoring for production
sysinfo = "0.30"

[dev-dependencies]
hyper = { version = "1.0", features = ["full"] }
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
axum-test = "15.0"

[[bin]]
name = "pantherswap-edge"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "run_migrations"
path = "src/bin/run_migrations.rs"

[[bin]]
name = "setup_database_tables"
path = "src/bin/setup_database_tables.rs"

[[bin]]
name = "run_simple_simulation"
path = "src/bin/run_simple_simulation.rs"

[[bin]]
name = "real_timescale_simulation"
path = "src/bin/real_timescale_simulation.rs"

[[bin]]
name = "rust_timescale_simulation"
path = "src/bin/rust_timescale_simulation.rs"

[[bin]]
name = "simple_rust_db_test"
path = "src/bin/simple_rust_db_test.rs"
